<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BrolistFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/deleteGroup"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:contentDescription="@string/delete_group"
            android:background="@drawable/rounded_corner"
            android:src="@drawable/ic_baseline_delete_forever_24"
            app:tint="#FF0000"
            tools:ignore="ImageContrastCheck"
            android:focusable="true" />

        <ImageButton
            android:id="@+id/groupSettings"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:contentDescription="@string/edit_group"
            android:background="@drawable/rounded_corner"
            android:src="@drawable/ic_action_settings"
            android:tint="@color/white"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/broDesc"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="Description de mon groupe de BROs"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/addGroup"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:contentDescription="@string/create_group"
            android:background="@drawable/rounded_corner"
            android:src="@drawable/ic_action_add"
            android:tint="@color/white"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:contentDescription="@string/contact_list">

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/brolist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="3"
            app:useDefaultMargins="true">

        </androidx.gridlayout.widget.GridLayout>
    </ScrollView>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/darkey" />

    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addBroButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/add_bro"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
</LinearLayout>